# ysyx-workbench

./: .clang-format  .gitignore  .gitmodules  Makefile  flake.nix  git_commit.sh  result
.gitea/workflows/: abstract-machine-build.yml  npc-test.yml
abstract-machine/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README  am.dot  am.dot.am-riscv-npc  am.dot.klib_interface.dependers  am.dot.m.dependers  am.dot.mingcc.dependers  default.nix
abstract-machine/.cache/clangd/index/: am.h.A4EACDA3FFE8E991.idx  amdev.h.CED3274D6110AE08.idx  audio.c.CC9C4D1C2C767072.idx  cpp.c.0997979504A7309C.idx  cte.c.15ADB982FFA62EFA.idx  disk.c.2126A5215FB353A4.idx  gpu.c.892C4F545984B680.idx  input.c.261BA2591BDB382F.idx  int64.c.CD49DDA5E3516884.idx  ioe.c.E16910D721F00C2C.idx  klib-macros.h.B800A13CFCD5D615.idx  klib.h.B932C5DE116ED988.idx  mpe.c.3D916D1C86ED9B7A.idx  native.h.28E399D158114ED9.idx  platform.c.BA0A6D5AC2C4C4A9.idx  platform.h.CF499A89AF71A47D.idx  stdio.c.4CCE235847DC4ACF.idx  stdlib.c.BDA9DBD681BB43AE.idx  string.c.8CBA579FC3418125.idx  timer.c.9671737A8A895CE0.idx  trap.S.B4DD7625DCFCA6BD.idx  trm.c.FF7A4AD075B0A551.idx  vme.c.F922A9D30D484DF9.idx
abstract-machine/am/: CMakeLists.txt
abstract-machine/am/.cache/clangd/index/: am.h.A4EACDA3FFE8E991.idx  amdev.h.CED3274D6110AE08.idx  audio.c.CC9C4D1C2C767072.idx  cte.c.15ADB982FFA62EFA.idx  disk.c.2126A5215FB353A4.idx  gpu.c.892C4F545984B680.idx  input.c.261BA2591BDB382F.idx  ioe.c.E16910D721F00C2C.idx  mpe.c.3D916D1C86ED9B7A.idx  platform.c.BA0A6D5AC2C4C4A9.idx  platform.h.CF499A89AF71A47D.idx  timer.c.9671737A8A895CE0.idx  trap.S.B4DD7625DCFCA6BD.idx  trm.c.FF7A4AD075B0A551.idx  vme.c.F922A9D30D484DF9.idx
abstract-machine/am/include/arch/: riscv.h
abstract-machine/am/src/: CMakeLists.txt
abstract-machine/am/src/native/: CMakeLists.txt  mpe.c
abstract-machine/am/src/platform/nemu/: trm.c
abstract-machine/am/src/platform/nemu/ioe/: input.c  timer.c
abstract-machine/am/src/riscv/: CMakeLists.txt
abstract-machine/am/src/riscv/nemu/: CMakeLists.txt  cte.c
abstract-machine/am/src/riscv/npc/: CMakeLists.txt  ioe.c  npc.h  timer.c  trm.c
abstract-machine/am/src/riscv/npc/libgcc/: CMakeLists.txt
abstract-machine/cmake/: am-config.cmake.in  klib-config.cmake.in  nemu-settings.cmake  riscv-settings.cmake
abstract-machine/klib/: CMakeLists.txt  result
abstract-machine/klib/include/: klib.h
abstract-machine/klib/src/: CMakeLists.txt  stdio.c  stdlib.c  string.c
abstract-machine/klib/tests/: CMakeLists.txt  stdio.c  string.c
am-kernels/: .envrc  CMakeLists.txt
am-kernels/.direnv/: flake-profile  flake-profile-79-link
am-kernels/.git.bak/: HEAD  config  index  packed-refs
am-kernels/.git.bak/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
am-kernels/tests/cpu-tests/: .result  CMakeLists.txt  Makefile
am-kernels/tests/cpu-tests/tests/: CMakeLists.txt
nemu/: .gdbinit  .gitignore  .integration-test.tmp  .result  1  Kconfig  Makefile  calculator.c  compile_commands.events.json  default.nix  disasm.cc  flake.nix  gdbstub.cast  gdbstub2.cast  lex.yy.c  perf.data  perf.data.old  result  test  test.c
nemu/.metals/: metals.mv.db
nemu/.zed/: tasks.json
nemu/configs/: defconfig  riscv32-lib_defconfig
nemu/include/: common.h  config.h  csr.h  debug.h  difftest.h  elf-parser.h  ftrace.h  func.h  isa.h  macro.h  nemu.h  types.h  utils.h
nemu/include/cpu/: cpu.h  decode.h  ifetch.h
nemu/scripts/: build.mk  config.mk
nemu/src/: filelist.mk  nemu-main.c
nemu/tests/: Makefile  expr_test.c
npc/: .envrc  .gdbinit  .gitignore  CMakeLists.txt  DartConfiguration.tcl  Makefile  a.out  build.sbt  flake.nix  test.vlt  wave.vcd  wave1.vcd  waveform.vcd
npc/cmake/: ChiselBuild.cmake  FindReadline.cmake
npc/constr/: Flow.nxdc  Keyboard.nxdc  SegHandler.nxdc  Switch.nxdc
npc/core/: .gitignore  Makefile  anno.json  build.sbt  waveform.vcd
npc/core/project/: plugin.sbt
npc/core/src/main/resources/: RamDpi.v
npc/core/src/main/scala/: ALU.scala  FlowMain.scala  Keyboard.scala  Main.scala  Mem.scala  ProgramCounter.scala  Reg.scala  RegisterFile.scala  SegControllerGenerator.scala  SegGenerator.scala
npc/core/src/main/scala/components/: ALU.scala  Mem.scala  ProgramCounter.scala  RegisterFile.scala
npc/core/src/main/scala/top/: ArgParse.scala  Config.scala  FlowMain.scala  Main.scala
npc/core/src/main/scala/utils/: DPI.scala  Keyboard.scala  SegControllerGenerator.scala
npc/core/src/resource/: pmem.v
npc/core/src/test/scala/: Keyboard.scala  Main.scala  Reg.scala  RegisterFile.scala
npc/core/test_run_dir/RegisterFile_should_work_with_2_read_ports/: RegisterFile.lo.fir
npc/core/test_run_dir/With_32_width_sub_should_work/: ALUGenerator.lo.fir
npc/csrc/: CMakeLists.txt  main.cpp
npc/csrc/Flow/: CMakeLists.txt  components.hpp  config.cpp  config.hpp  main.cpp  vl_wrapper.hpp
npc/csrc/Keyboard/: main.cpp
npc/csrc/Switch/: main.cpp
npc/csrc/devices/: CMakeLists.txt  rtc.cpp  serial.cpp
npc/csrc/devices/include/: devices.hpp
npc/csrc_nvboard/: main.cpp
npc/csrc_nvboard/Flow/: CMakeLists.txt  main.cpp
npc/csrc_nvboard/Keyboard/: main.cpp
npc/csrc_nvboard/SegHandler/: main.cpp
npc/include/: components.hpp  config.hpp  difftest.hpp  trm_difftest.hpp  trm_interface.hpp  types.h  vl_wrapper.hpp  vpi_wrapper.hpp
npc/obj_dir/: Vexample.mk  Vexample__ALL.cpp  Vexample___024root__DepSet_hcb5acca5__0.cpp  Vexample___024root__DepSet_hcb5acca5__0__Slow.cpp  Vexample_classes.mk
npc/resource/: addi.txt
npc/trace/: main.cpp
npc/utils/: CMakeLists.txt
npc/utils/disasm/: CMakeLists.txt
npc/utils/disasm/include/: disasm.hpp
npc/utils/sdb/: CMakeLists.txt  addrexp.l  addrexp.y  console.cpp  disasm.cpp  sdb.cpp
npc/utils/sdb/include/: console.hpp  sdb.hpp
npc/vsrc/: example.v
(+48 files in other folders)
